# SpotFlamer

./: .gitignore  Cargo.toml  README.md  embed_playlist.html  embed_track.html  minisign.key  parse_tracks.py  test_playlist.html  track.html
.github/workflows/: release.yml
assets/: minisign.pub
src/: app.rs  config.rs  downloader.rs  ffmpeg_utils.rs  main.rs  metadata.rs  spotify.rs  ui.rs  updater.rs  youtube.rs
