[package]
name = "spotflamer"
version = "1.0.5"
edition = "2021"
description = "Desktop music downloader — Spotify metadata + YouTube audio → MP3 320kbps"

[dependencies]
# GUI
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = "0.25"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP & serialization
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio metadata
id3 = "1"

# URL / text parsing
regex = "1"
url = "2"

# Native file dialog
rfd = "0.15"

# User directories
dirs = "6"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Open file manager
open = "5"
winapi = { version = "0.3.9", features = ["std", "winbase"] }
sanitize-filename = "0.6.0"
self_update = { version = "0.44.0", features = ["signatures"] }
zipsign-api = "0.2.1"
base64ct = "1.8.3"

[build-dependencies]
winres = "0.1"
